--- a/landing/CSS/current_style.css
+++ b/landing/CSS/current_style.css
@@ -292,7 +292,10 @@ body {
 }
 
 .mobilenav ul li:not(:last-child) {
-	margin-bottom: 10px;
+	margin-bottom: 5px;
+	padding-bottom: 5px;
+	border-bottom: 1px solid rgba(255, 255, 255, 0.8);
+	border-style: inset;
 }
 
 .mobilenav ul li a{
