--- a/landing/CSS/userpage_style.css
+++ b/landing/CSS/userpage_style.css
@@ -1140,7 +1140,10 @@ input::-webkit-contacts-auto-fill-button {
 }
 
 .mobilenav ul li:not(:last-child) {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.8);
+    border-style: inset;
 }
 
 .mobilenav ul li a {
@@ -1618,6 +1621,10 @@ input::-webkit-contacts-auto-fill-button {
 
     .box.random .boxcontent .collected {
     	margin-bottom: 10px;
+    }
+
+    .badges .badgewrapper .achievtooltip {
+        width: 120%;
     }
 }
 
